// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Input/DateTimePicker Default 1`] = `
.c2 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

@media (min-width:640px) {
  .c3 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor="datetimepicker-storybook-default"
    >
      When did it happen?
    </label>
  </div>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <div
        className="c2"
      >
        <input
          className="c3"
          onChange={[Function]}
          onClick={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Input/DateTimePicker Error 1`] = `
.c5 svg {
  height: 1.25rem;
  width: 1.25rem;
  --text-opacity: 1;
  color: rgba(240,82,82,var(--text-opacity));
}

.c2 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
  padding-right: 2.5rem;
  --border-opacity: 1;
  border-color: rgba(248,180,180,var(--border-opacity));
  --text-opacity: 1;
  color: rgba(119,29,29,var(--text-opacity));
}

.c3::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

.c3::-webkit-input-placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3::-moz-placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3:-ms-input-placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3::placeholder {
  --placeholder-opacity: 1;
  color: rgba(248,180,180,var(--placeholder-opacity));
}

.c3:focus {
  --border-opacity: 1;
  border-color: rgba(248,180,180,var(--border-opacity));
  box-shadow: 0 0 0 3px rgba(248,180,180,0.45);
}

.c4 {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  padding-right: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c6 {
  margin-top: 0.25rem;
  font-size: 0.875rem;
  --text-opacity: 1;
  color: rgba(224,36,36,var(--text-opacity));
}

@media (min-width:640px) {
  .c3 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor="datetimepicker-storybook-error"
    >
      When did it happen?
    </label>
  </div>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <div
        className="c2"
      >
        <input
          className="c3"
          onChange={[Function]}
          onClick={[Function]}
          value="10.07.2020 09:15"
        />
        <div
          className="c4"
        >
          <div
            className="c5"
            color="alert"
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    className="c6"
  >
    This is an error!
  </p>
</div>
`;

exports[`Storyshots Molecules/Input/DateTimePicker Prefilled 1`] = `
.c2 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
}

.c3::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

@media (min-width:640px) {
  .c3 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor="datetimepicker-storybook-prefilled"
    >
      When did it happen?
    </label>
  </div>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <div
        className="c2"
      >
        <input
          className="c3"
          onChange={[Function]}
          onClick={[Function]}
          value="10.07.2020 09:15"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Input/DateTimePicker Required 1`] = `
.c3 {
  margin-top: 0.25rem;
  position: relative;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #ffffff;
  border-color: #d2d6dc;
  border-width: 1px;
  border-radius: 0.375rem;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  display: block;
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4::-moz-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4:-ms-input-placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4::placeholder {
  color: #9fa6b2;
  opacity: 1;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
  border-color: #a4cafe;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  display: block;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

@media (min-width:640px) {
  .c4 {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

<div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor="datetimepicker-storybook-required"
    >
      When did it happen?
    </label>
    <span
      className="c2"
    >
      Required
    </span>
  </div>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          onChange={[Function]}
          onClick={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
